代码优化